infrastructure-live-v1/dev/vpc/1-vpc.tf
resource "aws_vpc" "main" {
  cidr_block = var.vpc_idr_block

  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "${var.env}-${var.project}"
  }
}
